--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,6 +16,7 @@ pytest = "^6.2.0"
 black = "^20.8b1"
 flake8 = "^3.8.4"
 requests = "^2.25.0"
+uvicorn = "^0.13.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
