--- a/.gitignore
+++ b/.gitignore
@@ -197,6 +197,31 @@ tags
 !.yarn/sdks
 !.yarn/versions
 
+### Terraform ###
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Ignore any .tfvars files that are generated automatically for each Terraform run. Most
+# .tfvars files are managed as part of configuration and so should be included in
+# version control.
+#
+# example.tfvars
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+
 # if you are NOT using Zero-installs, then:
 # comment the following lines
 !.yarn/cache
@@ -205,3 +230,4 @@ tags
 # .pnp.*
 
 # End of https://www.toptal.com/developers/gitignore/api/react,python,vscode,vim,yarn
+#
