--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
+        "@types/react-syntax-highlighter": "^13.5.0",
         "clsx": "^1.1.1",
         "history": "^5.0.0",
         "react": "^17.0.1",
@@ -22,6 +23,7 @@
         "react-dropzone": "^11.2.4",
         "react-router-dom": "^6.0.0-beta.0",
         "react-scripts": "4.0.1",
+        "react-syntax-highlighter": "^15.4.3",
         "typescript": "^4.0.3",
         "web-vitals": "^0.2.4"
     },
